--- a/src/main/resources/templates/groups/groups.html
+++ b/src/main/resources/templates/groups/groups.html
@@ -39,7 +39,6 @@
 
 <body>
 
-
     <!-- navbar  -->
     <nav class="navbar navbar-expand-md sticky-top navbar-dark" style="background-color: #465d84; color: #f0f0f0; ">
         <div class="container-fluid">
@@ -83,6 +82,7 @@
 
     </nav>
     <!-- end navbar  -->
+
 
     <div class="album py-5 bg-light">
         <div class="container">
@@ -162,7 +162,7 @@
                                 mindset with the
                                 other group members </p>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item" th:each="group : ${memberships}">
+                                <li class="list-group-item" th:each="group : ${myGroupMemberships}">
                                     <button type="button" class="btn btn-sm btn-outline-warning">
                                         Leave
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -186,7 +186,10 @@
     </div>
 
 
-
+      <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+  crossorigin="anonymous"></script>
 
 </body>
 
