naming of button and form changed

--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -95,12 +95,12 @@
         <!-- Canvas Start -->
         <a class="btn btn-primary mt-3 mb-2" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
           aria-controls="offcanvasExample">
-          Add item
+          Add Event
         </a>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample"
           aria-labelledby="offcanvasExampleLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasExampleLabel">new Item</h5>
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">New Event</h5>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
