--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -82,11 +82,8 @@
   </nav>
   <!-- end navbar  -->
 
-
-  <div class="container space"></div>
-
   <!-- carousel placing  -->
-  <div class="container-fluid ">
+  <div class="container-fluid mt-3">
 
     <div class="row justify-content-center ">
 
@@ -200,7 +197,6 @@
 
           <div class="carousel-inner">
 
-            <!-- Event Tables  -->
             <div th:each="month : ${monthEnumArray}" class="carousel-item"
               th:classappend="${currentMonthValue} == ${month.getValue} ? 'active' : '' ">
               <div class="container col-8">
@@ -209,7 +205,9 @@
                     <span th:text="${month}"></span>
                   </div>
                   <div class="card-body pb-3">
-                    <table class="table table-striped table-hover">
+
+                    <!-- Event Tables  -->
+                    <table class="table table-striped table-hover" th:if="${view} == 'table'">
                       <thead>
                         <tr>
                           <th scope="col">Date</th>
@@ -254,6 +252,51 @@
                         </tr>
                       </tbody>
                     </table>
+
+                    <!-- Event Stickers -->
+                    <div class="row row-cols-1 row-cols-md-3 g-4" th:if="${view} == 'sticker'">
+                      <div class="col" th:each="sticker : ${myStickers}"
+                        th:if="${sticker.getEventDate.getMonthValue} == ${month.getValue}">
+                        <div class="card">
+
+                          <div class="card-header">
+                            <h5 class="card-title" th:text="${sticker.getEventDate.toLocalDate}"></h5>
+                            <h6 class="card-subtitle text-muted" th:text="${sticker.getFkAuthor}"></h6>
+                          </div>
+                          <div class="card-body">
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item" th:text="${sticker.getContent}"></li>
+                              <li class="list-group-item" th:text="${sticker.getEventDate.toLocalTime}"></li>
+                              <li class="list-group-item"><span th:text="${sticker.getDuration}"></span>h</li>
+                            </ul>
+                          </div>
+                          <div class="card-footer">
+                            <span th:if="${sticker.getFkAuthor} != ${#authentication.getName}"> - </span>
+                            <div class="btn-group btn-group-sm" role="group"
+                              th:if="${sticker.getFkAuthor} == ${#authentication.getName} ">
+                              <form action="#" th:action="@{'/stickers/edit/' + ${sticker.id}}" method="get">
+                                <button type="submit" class="btn btn-sm btn-outline-warning text-warning">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-pencil" viewBox="0 0 16 16">
+                                    <path
+                                      d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                                  </svg>
+                                </button>
+                              </form>
+                              <form action="#" th:action="@{'/stickers/' + ${sticker.id}}" th:method="DELETE">
+                                <button type="submit" class="btn btn-sm btn-outline-danger text-danger">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-trash3" viewBox="0 0 16 16">
+                                    <path
+                                      d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
+                                  </svg>
+                                </button>
+                              </form>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+
                   </div>
                 </div>
               </div>
