switch views between table and sticker implemented

--- a/src/main/resources/templates/stickers/index.html
+++ b/src/main/resources/templates/stickers/index.html
@@ -294,9 +294,14 @@
                               </form>
                             </div>
                           </div>
+                        </div>
                       </div>
                     </div>
+                  </div>
 
+                  <div class="card-footer">
+                    <a th:href="@{stickers(view='table', month=${month.getValue}, group=${currentGroupId})}" class="card-link">Table</a>
+                    <a th:href="@{stickers(view='sticker', month=${month.getValue}, group=${currentGroupId})}" class="card-link">Sticker</a>
                   </div>
                 </div>
               </div>
